[gd_scene load_steps=8 format=3 uid="uid://0mueab7w8f21"]

[ext_resource type="Script" path="res://start.gd" id="1_u02kx"]
[ext_resource type="Texture2D" uid="uid://cuv4gbgva6c1a" path="res://assets/ui/btn_create_game.png" id="2_x0q0c"]
[ext_resource type="Texture2D" uid="uid://cip1sn2wflgem" path="res://assets/ui/btn_start_game.png" id="3_38bn3"]
[ext_resource type="Texture2D" uid="uid://bhn7j2ssbui2d" path="res://assets/ui/btn_join_game.png" id="3_hde24"]
[ext_resource type="Texture2D" uid="uid://c6kqt565xga07" path="res://assets/ui/btn_leave_game.png" id="4_5v2yp"]
[ext_resource type="Theme" uid="uid://ckvowov5bcv6l" path="res://default_ui_theme.tres" id="6_vq6qa"]
[ext_resource type="LabelSettings" uid="uid://cuiayxv1yxm7a" path="res://default_font.tres" id="7_l8gfs"]

[node name="Game" type="CanvasLayer"]
script = ExtResource("1_u02kx")

[node name="CreateButton" type="TextureButton" parent="."]
offset_left = 798.0
offset_top = 356.0
offset_right = 1310.0
offset_bottom = 868.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("2_x0q0c")

[node name="StartButton" type="TextureButton" parent="."]
visible = false
offset_left = 997.0
offset_top = 485.0
offset_right = 1509.0
offset_bottom = 997.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("3_38bn3")

[node name="LeaveButton" type="TextureButton" parent="."]
visible = false
offset_left = 29.0
offset_top = 491.0
offset_right = 541.0
offset_bottom = 1003.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("4_5v2yp")

[node name="JoinButton" type="TextureButton" parent="."]
offset_left = 336.0
offset_top = 356.0
offset_right = 848.0
offset_bottom = 868.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("3_hde24")

[node name="IpInput" type="LineEdit" parent="."]
offset_left = 95.0
offset_top = 406.0
offset_right = 305.0
offset_bottom = 443.0
theme = ExtResource("6_vq6qa")
placeholder_text = "IP Address"

[node name="WaitingText" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_top = 23.0
offset_right = 91.0
offset_bottom = 88.0
grow_horizontal = 2
text = "Waiting for riders..."
label_settings = ExtResource("7_l8gfs")

[node name="PlayersCount" type="Label" parent="."]
visible = false
offset_left = 525.0
offset_top = 95.0
offset_right = 640.0
offset_bottom = 368.0
label_settings = ExtResource("7_l8gfs")

[connection signal="pressed" from="CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
